--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "barryvdh/laravel-dompdf": "^2.1",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "phpoffice/phpspreadsheet": "^4.0"
+        "phpoffice/phpspreadsheet": "^4.0",
+        "pragmarx/google2fa-laravel": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
